--- a/shop.html
+++ b/shop.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="shop.css">
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-straight/css/uicons-regular-straight.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
@@ -23,8 +24,8 @@
 
 <div>
 <ul  id="navbar">
-<li> <a  class="active"href="index.html">Home</a></li>
-<li> <a href="shop.html">Shop</a></li>
+<li> <a  href="index.html">Home</a></li>
+<li> <a class="active"href="shop.html">Shop</a></li>
 <li> <a href="blog.html">Blog</a></li>
 <li> <a href="about.html">About</a></li>
 <li> <a href="contact.html">Contact</a></li>
@@ -42,47 +43,18 @@
 
 </section>
 
-<section id="hero">
+<section id="page-header">
 
-<h4>Trade-in-off</h4>
-<h2>Super value deals</h2>
-<h1>On all products</h1>
+<h2>#stayhome</h2>
+
 <p>Save more with coupons  up to 70% off !</p>
-<button>Shop Now</button>
+
 </section>
 
-<section id="feature" class="section-p1">
 
-<div class="fe-box">
-  <img src="img/features/f1.png" alt="">
-  <h6>Free Shipping</h6>
-</div>
-<div class="fe-box">
-  <img src="img/features/f2.png" alt="">
-  <h6>Online Order</h6>
-</div>
-<div class="fe-box">
-  <img src="img/features/f3.png" alt="">
-  <h6>Save Money</h6>
-</div>
-<div class="fe-box">
-  <img src="img/features/f4.png" alt="">
-  <h6>Promotions</h6>
-</div>
-<div class="fe-box">
-  <img src="img/features/f5.png" alt="">
-  <h6>Happy Sell</h6>
-</div>
-<div class="fe-box">
-  <img src="img/features/f6.png" alt="">
-  <h6>F24/7 Support</h6>
-</div>
-</section>
 
 <section id="product1" class="section-p1">  
-<h2> Featured Products</h2>
 
-<p> Summer Collection New Morden Design</p>
 <div class="pro-container">
   <div class="pro">
     <img src="img/products/f1.jpg" alt="">
@@ -246,25 +218,7 @@
     </div>
     <a href="#"><i class="fi fi-rr-shopping-cart-add cart"></i> </a>
   </div> 
-</div>
 
-</section>
-
-
-<section id="banner" class="sectipon-m1">
-
-<h4>Repair Services </h4>
-<h2>Up to <span> %70 off</span> - All t-Shirts & Acessories</h2>
-<button class="normal">Explore More</button>
-
-</section>
-
-
-<section id="product1" class="section-p1">  
-  <h2> Featured Products</h2>
-  
-  <p> Summer Collection New Morden Design</p>
-  <div class="pro-container">
     <div class="pro">
       <img src="img/products/n1.jpg" alt="">
       <div class="des">
@@ -431,41 +385,14 @@
   
   </section>
 
-
-<section id="sm-banner" class="section-p1">
-<div class="banner-box">
-  <h4>crazy deals</h4>
-  <h2>buy 1 get 1 free</h2>
-<span>The best classic dress is on sale at care </span>
-
-<button class="white"> Learn More</button>
-</div>
-<div class="banner-box banner-box2">
-  <h4>spring/summer</h4>
-  <h2> upcomming season</h2>
-<span>The best classic dress is on sale at care</span>
-
-<button class="white"> Collection</button>
-</div>
-
-
+<section id="pagination" class="section-p1">
+<a href="#">1</a>
+<a href="#">2</a>
+<a href="#"><i class="fi fi-rr-arrow-small-right"></i></a>
 </section>
 
 
-<section id="banner3">
-  <div class="banner-box ">
-    <h4>Seasonal Sale</h4>
-  <h3> Winter Collection -50% OFF</h3>
-    </div>
-    <div class="banner-box banner-box2">
-      <h4>Seasonal Sale</h4>
-    <h3> Winter Collection -50% OFF</h3>
-      </div>
-      <div class="banner-box banner-box3">
-        <h4>Seasonal Sale</h4>
-      <h3> Winter Collection -50% OFF</h3>
-        </div>
-</section>
+
 
 
 <section id="newsletter" class="section-m1 section-p1">
