--- a/sproduct.html
+++ b/sproduct.html
@@ -326,6 +326,26 @@
 </footer>
 
 
+
+<script>
+    var MaingImg =document.getElementById("MainImg");
+var smallimg= document.getElementsByClassName("small-img");
+smallimg[0].onclick= () =>{
+MainImg.src=smallimg[0].src;
+}
+smallimg[1].onclick= () =>{
+MainImg.src=smallimg[1].src;
+}
+smallimg[2].onclick= () =>{
+MainImg.src=smallimg[2].src;
+}
+smallimg[3].onclick= () =>{
+MainImg.src=smallimg[3].src;
+}
+smallimg[4].onclick= () =>{
+MainImg.src=smallimg[4].src;
+}
+</script>
 <script src="/script.js"></script>
 </body>
 </html>
