--- a/shop.html
+++ b/shop.html
@@ -56,7 +56,7 @@
 <section id="product1" class="section-p1">  
 
 <div class="pro-container">
-  <div class="pro">
+  <div class="pro"  onclick="window.location.href='sproduct.html';">
     <img src="img/products/f1.jpg" alt="">
     <div class="des">
       <span>addidas</span>
